--- a/pom.xml
+++ b/pom.xml
@@ -265,6 +265,21 @@
         <version>2.4.4</version>
         <scope>runtime</scope>
       </dependency>
+      <dependency>
+        <groupId>javax.inject</groupId>
+        <artifactId>javax.inject</artifactId>
+        <version>1.0</version>
+      </dependency>
+      <dependency>
+        <groupId>cglib</groupId>
+        <artifactId>cglib</artifactId>
+        <version>3.1</version>
+      </dependency>
+      <dependency>
+        <groupId>org.ow2.asm</groupId>
+        <artifactId>asm</artifactId>
+        <version>4.1</version>
+      </dependency>
       <!-- spring -->
       <dependency>
         <groupId>org.springframework</groupId>
