--- a/pom.xml
+++ b/pom.xml
@@ -280,6 +280,11 @@
         <artifactId>asm</artifactId>
         <version>4.1</version>
       </dependency>
+      <dependency>
+        <groupId>com.google.guava</groupId>
+        <artifactId>guava</artifactId>
+        <version>18.0</version>
+      </dependency>
       <!-- spring -->
       <dependency>
         <groupId>org.springframework</groupId>
