Fix spring config in web.xml

--- a/web/src/main/webapp/WEB-INF/web.xml
+++ b/web/src/main/webapp/WEB-INF/web.xml
@@ -28,8 +28,8 @@
     <servlet-name>service-dispatcher</servlet-name>
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
     <init-param>
-      <param-name>contextAttribute</param-name>
-      <param-value>springMvc</param-value>
+      <param-name>contextConfigLocation</param-name>
+      <param-value>classpath:/conf/spring/web/context.xml</param-value>
     </init-param>
     <load-on-startup>1</load-on-startup>
   </servlet>
