--- a/pom.xml
+++ b/pom.xml
@@ -201,6 +201,9 @@
               </rules>
               <skip>${jacoco.skip}</skip>
               <haltOnFailure>true</haltOnFailure>
+              <excludes>
+                <exclude>**/*Configuration.*</exclude>
+              </excludes>
             </configuration>
           </execution>
         </executions>
